<resources>
    <string name="app_name">Calculo de Area e Perimetro</string>
    <string name="retangulo">Retangulo</string>
    <string name="circulo">Circulo</string>
    <string name="base">Base</string>
    <string name="altura">Altura</string>
    <string name="raio">Raio</string>
    <string name="botaoPerimetro">Perimetro</string>
    <string name="botaoArea">Area</string>
    <string name="perimetro">Perimetro:</string>
    <string name="area">Area:</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>