<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/frameLayout2"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".CirculoFragment">

    <EditText
        android:id="@+id/etRaio"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_marginTop="61dp"
        android:layout_marginBottom="36dp"
        android:ems="10"
        android:hint="@string/raio"
        android:importantForAutofill="no"
        android:inputType="numberDecimal"
        android:textColorHint="@color/black"
        app:layout_constraintBottom_toTopOf="@+id/btnAreaCirculo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/btnPerimetroCirculo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/botaoPerimetro"
        app:layout_constraintBaseline_toBaselineOf="@+id/btnAreaCirculo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.336"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/btnAreaCirculo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="79dp"
        android:text="@string/botaoArea"
        app:layout_constraintBottom_toTopOf="@+id/tvResCirculo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.69"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etRaio" />

    <TextView
        android:id="@+id/tvResCirculo"
        android:layout_width="271dp"
        android:layout_height="0dp"
        android:layout_marginBottom="330dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnAreaCirculo" />
</androidx.constraintlayout.widget.ConstraintLayout>